fix save col options

--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -262,7 +262,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('zip').visible"
+                                    <input [(ngModel)]="getSortableColumn('zip').checked"
                                         (change)="toggleVisibility('zip', $event)"
                                         type="checkbox">Zip
                                 </label>
@@ -271,7 +271,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('contributorEmployer').visible"
+                                    <input [(ngModel)]="getSortableColumn('contributorEmployer').checked"
                                         (change)="toggleVisibility('contributorEmployer', $event)"
                                         type="checkbox">Contributor Employer
                                 </label>
@@ -282,7 +282,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('type').visible"
+                                    <input [(ngModel)]="getSortableColumn('type').checked"
                                     (change)="toggleVisibility('type', $event)"
                                         type="checkbox">Type
                                 </label>
@@ -291,7 +291,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('date').visible"
+                                    <input [(ngModel)]="getSortableColumn('date').checked"
                                         (change)="toggleVisibility('date', $event)"
                                         type="checkbox">Date
                                 </label>
@@ -300,7 +300,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('contributorOccupation').visible"
+                                    <input [(ngModel)]="getSortableColumn('contributorOccupation').checked"
                                         (change)="toggleVisibility('contributorOccupation', $event)"
                                         type="checkbox">Contributor Occupation
                                 </label>
@@ -311,7 +311,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('transactionId').visible"
+                                    <input [(ngModel)]="getSortableColumn('transactionId').checked"
                                     (change)="toggleVisibility('transactionId', $event)"
                                         type="checkbox">Transaction ID
                                 </label>
@@ -320,7 +320,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('amount').visible"
+                                    <input [(ngModel)]="getSortableColumn('amount').checked"
                                     (change)="toggleVisibility('amount', $event)"
                                         type="checkbox">Amount
                                 </label>
@@ -329,7 +329,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('memoCode').visible"
+                                    <input [(ngModel)]="getSortableColumn('memoCode').checked"
                                         (change)="toggleVisibility('memoCode', $event)"
                                         type="checkbox">Memo Code
                                 </label>
@@ -340,7 +340,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('name').visible"
+                                    <input [(ngModel)]="getSortableColumn('name').checked"
                                         (change)="toggleVisibility('name', $event)"
                                         type="checkbox">Name
                                 </label>
@@ -349,7 +349,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('aggregate').visible"
+                                    <input [(ngModel)]="getSortableColumn('aggregate').checked"
                                         (change)="toggleVisibility('aggregate', $event)"
                                         type="checkbox">Aggregate
                                 </label>
@@ -358,7 +358,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('memoText').visible"
+                                    <input [(ngModel)]="getSortableColumn('memoText').checked"
                                         (change)="toggleVisibility('memoText', $event)"
                                         type="checkbox">Memo Text/Description
                                 </label>
@@ -369,7 +369,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('state').visible"
+                                    <input [(ngModel)]="getSortableColumn('state').checked"
                                         (change)="toggleVisibility('state', $event)"
                                         type="checkbox">State
                                 </label>
@@ -378,7 +378,7 @@
                         <div class="col-md">
                             <div class="checkbox">
                                 <label>
-                                    <input [(ngModel)]="getCloneSortableColumn('purposeDescription').visible"
+                                    <input [(ngModel)]="getSortableColumn('purposeDescription').checked"
                                         (change)="toggleVisibility('purposeDescription', $event)"
                                         type="checkbox">Purpose Description
                                 </label>
