Fne 620 mahendra sprint8 (#244)
* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

* FNE620 changes

FNE620 changes

--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -37,6 +37,16 @@
         </div>
       </div>
     </div>
+    <div class="grid-row">
+      <div class="grid-col">
+        <div class="label">
+          Committee Id
+        </div>
+        <div class="text">
+          {{ committee_details?.committeeid}}
+        </div>
+      </div>
+     </div>
       <div class="grid-row">
         <div class="grid-col">
           <div class="label">
