--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -206,7 +206,7 @@
           <div class="grid-row__col grid-row__col--12">
               <div class="forms__btn-container">
                 <button
-                  class="btn btn-default btn-left"
+                  class="btn btn-primary btn-left"
                   type="button"
                   (click)="cancel()"
                 >
