--- a/front-end/src/app/shared/scss/classes/_btn.scss
+++ b/front-end/src/app/shared/scss/classes/_btn.scss
@@ -1,3 +1,7 @@
+.btn {
+  cursor: pointer;
+}
+
 .btn-primary {
   background-color: $blueZodiac;
   border-color: $blueZodiac;
@@ -48,7 +52,6 @@
   background-repeat: no-repeat;
   border: none;
   box-shadow: none;
-  cursor: pointer;
   overflow: hidden;
   outline: none;
   &:hover,
@@ -60,10 +63,10 @@
     box-shadow: none !important;
     cursor: pointer;
     overflow: hidden;
-    outline: none;    
+    outline: none;
   }
   .info-icon {
-    color: $blueZodiac; 
+    color: $blueZodiac;
     outline: none;
   }
 }
