--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -197,5 +197,11 @@
     background-color: #2196F3;
   }
 
+  .validation-error {
+    color: red;
+    padding: .15em 5em;
+    font-weight: bold;
+  } 
+
 }
 
