--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -203,5 +203,13 @@
     font-weight: bold;
   } 
 
+  // input[type="checkbox" i]:disabled > label {
+  // input {
+  //   color: lightgrey;
+  // }
+  input[type="checkbox" i]:disabled, .disabled-column-option{
+    color: lightgrey;
+} 
+
 }
 
