Fne 615 mahendra sprint8 (#249)
* FNE 615 changes

FNE 615 changes

* FNE 615 changes

FNE 615 changes

* FNE615 sign in screen change

FNE615 sign in screen change

* FNE615 sign in screen change

FNE615 sign in screen change

--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -126,6 +126,7 @@
                    type="email"
                    name="additional_email_1"
                    value=""
+                   (change)="changeAdditionalEmail($event)"
                    (blur)="updateAdditionalEmail($event)"
                    formControlName="additional_email_1"
                  >
@@ -150,6 +151,7 @@
                    type="email"
                    name="additional_email_2"
                    value=""
+                   (change)="changeAdditionalEmail($event)"
                    (blur)="updateAdditionalEmail($event)"
                    formControlName="additional_email_2"
                  >
