Fixing pdf link in tooltip for other forms

--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -156,7 +156,7 @@
                  </button>
                  <ng-template #otherFormsToolTips>
                     {{committee_form.form_info}}
-                    <a href="{{formpdf}}"  target="_blank">Instructions</a>.
+                    <a href="{{ committee_form.form_pdf_url }}"  target="_blank">Instructions</a>.
                     <i class="external-link-icon" aria-hidden="true">
                       <span class="sr-only">Link opens in new window.</span>
                     </i>
