--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -85,7 +85,10 @@
         <table class="table table-striped table-hover table__sortable forms__trx-table">
             <thead>
                 <tr>
-                    <th class="forms__trx-table-checkbox"></th>
+                    <th class="forms__trx-table-checkbox">
+                        <input [(ngModel)]="allTransactionsSelected"
+                            type="checkbox" (change)="changeAllTransactionsSelected()">
+                    </th>
                     <th *ngIf="isColumnVisible('type')"
                         [class]="getSortClass('type')" 
                         (click)="changeSortDirection('type')">Type
@@ -140,7 +143,30 @@
                         [class]="getSortClass('memoText')" 
                         (click)="changeSortDirection('memoText')">Memo Text/Description
                     </th>                                                                                                                                    
-                    <th [class]=""></th>
+                    <th class="bulk_action">
+                        <div class="btn-group" ngbDropdown role="group" aria-label="Action dropdown">
+                            <button class="btn btn-sm btn-secondary" ngbDropdownToggle>
+                                <i class="fas fa-ellipsis-h"></i>
+                            </button>
+                            <div id="forms__trx-dropdown-action" class="dropdown-menu" ngbDropdownMenu>
+                                <button class="dropdown-item" (click)="cloneTransactionsSelected()">
+                                    <i class="fas fa-copy"></i>Clone
+                                </button>
+                                <button class="dropdown-item" (click)="linkTransactionsSelected()">
+                                    <i class="fas fa-link"></i>Link
+                                </button>
+                                <button class="dropdown-item" (click)="viewTransactionsSelected()">
+                                    <i class="fas fa-eye"></i>View
+                                </button>
+                                <button class="dropdown-item" (click)="editTransactionsSelected()">
+                                    <i class="fas fa-edit"></i>Edit
+                                </button>
+                                <button class="dropdown-item" (click)="trashTransactionsSelected()">
+                                    <i class="fas fa-trash"></i>Trash
+                                </button>
+                            </div>
+                        </div>                        
+                    </th>
                 </tr>
             </thead>
             <tbody>
